--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             </div>
         <div class="linkIMG">
             <h1>Imagem de referência</h1>
-            <input onclick="ValidarURL()" type="text" placeholder="Insira o link">
+            <input type="text" placeholder="Insira o link">
         </div>
-        <div onclick="AtivarBotao(this)" class="botao"> Confirmar pedido</div>
+        <div onclick="AtivarBotao()" class="botao inativo"> Confirmar pedido</div>
     </div>
     </div>
         <!-- Caixa de escolha de opções -->
 
         <!-- Caixa ilustraçao -->
-    <div class="tela"><img class="ilustracao" src="imagens/FashionDriven/ilustração.png" alt=""></div>
+    <div class="tela"><img class="ilustracao" src="imagens/FashionDriven/ilustração.png"></div>
     
     </div>
         <!-- Caixa ilustraçao -->
