Camisas Online da API

--- a/index.html
+++ b/index.html
@@ -83,17 +83,14 @@
     <div class="pedidos">
         <h3>Ultimos pedidos</h3>
         <div class="vitrine">
-            <div class="expo"><img class="roupas"src="imagens/FashionDriven/Blusa1.png"><h4><strong>Criador:</strong> Agata</h4></div>
-            <div class="expo"><img class="roupas"src="imagens/FashionDriven/Blusa2.png"><h4><strong>Criador:</strong> Agata</h4></div>
-            <div class="expo"><img class="roupas"src="imagens/FashionDriven/Blusa3.png"><h4><strong>Criador:</strong> Agata</h4></div>
-            <div class="expo"><img class="roupas"src="imagens/FashionDriven/Blusa4.png"><h4><strong>Criador:</strong> Agata</h4></div>
-            <div class="expo"><img class="roupas"src="imagens/FashionDriven/Blusa5.png"><h4><strong>Criador:</strong> Agata</h4></div>
+        
         </div>
     </div>
         
     </div>
 <br>
 <br>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="script.js"></script>   
 </body>
 </html>
