--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
             <h1>Escolha o modelo</h1>
             <div class="escolha modelo">
                 <div class="opçaoG">
-                    <div onclick="SelecionarModelo(this)" class="opçao "><img class="desenho um" src="imagens/FashionDriven/tshirt.png" ></div>
+                    <div onclick="SelecionarModelo(this)" class="opçao "><img class="desenho um" src="imagens/FashionDriven/tshirt.png" ><p id="tipo">t-shirt</p></div>
+                    
                     <h2>T-shirt</h2>
                 </div>
                 <div class="opçaoG">
-                    <div onclick="SelecionarModelo(this)" class="opçao "><img class="desenho dois" src="imagens/FashionDriven/Camiseta.png" ></div>
+                    <div onclick="SelecionarModelo(this)" class="opçao "><img class="desenho dois" src="imagens/FashionDriven/Camiseta.png" ><p id="tipo">long</p></div>
                     <h2>Camiseta</h2>
                 </div>
                 <div class="opçaoG">
-                     <div onclick="SelecionarModelo(this)" class="opçao"><img id="manga" class="desenho tres" src="imagens/FashionDriven/Mangalonga.png" ></div>
+                     <div onclick="SelecionarModelo(this)" class="opçao"><img id="manga" class="desenho tres" src="imagens/FashionDriven/Mangalonga.png" ><p id="tipo">top-tank</p></div>
                      <h2>Manga Longa</h2>
                 </div>
             </div>
@@ -36,15 +37,15 @@
             <h1>Escolha a gola </h1>
             <div class="escolha gola">
                 <div class="opçaoG">
-                    <div onclick="SelecionarGola(this)" class="opçao gola"><img id="gola" class="desenho um" src="imagens/FashionDriven/GolaV.png" ></div>
+                    <div onclick="SelecionarGola(this)" class="opçao gola"><img id="gola" class="desenho um" src="imagens/FashionDriven/GolaV.png" ><p id="tipo">v-neck</p></div>
                     <h2>Gola V</h2>
                 </div>
                 <div class="opçaoG">
-                    <div onclick="SelecionarGola(this)" class="opçao gola"><img id="redonda" class="desenho dois" src="imagens/FashionDriven/GolaRedonda.png" ></div>
+                    <div onclick="SelecionarGola(this)" class="opçao gola"><img id="redonda" class="desenho dois" src="imagens/FashionDriven/GolaRedonda.png" ><p id="tipo">round</p></div>
                     <h2>Gola Redonda</h2>
                 </div>
                 <div class="opçaoG">
-                     <div onclick="SelecionarGola(this)" class="opçao gola"><img id="polo" class="desenho tres" src="imagens/FashionDriven/GolaPolo.png" ></div>
+                     <div onclick="SelecionarGola(this)" class="opçao gola"><img id="polo" class="desenho tres" src="imagens/FashionDriven/GolaPolo.png" ><p id="tipo">polo</p></div>
                      <h2>Gola polo</h2>
                 </div>
             </div>
@@ -52,15 +53,15 @@
             <h1>Escolha o tecido </h1>
             <div class="escolha tecido">
                 <div class="opçaoG">
-                    <div onclick="SelecionarTecido(this)" class="opçao tecido"><img id="seda" class="desenho um" src="imagens/FashionDriven/Seda.png" ></div>
+                    <div onclick="SelecionarTecido(this)" class="opçao tecido"><img id="seda" class="desenho um" src="imagens/FashionDriven/Seda.png" ><p id="tipo">silk</p></div>
                     <h2>Seda</h2>
                 </div>
                 <div class="opçaoG">
-                    <div onclick="SelecionarTecido(this)" class="opçao tecido"><img  class="desenho dois" src="imagens/FashionDriven/Algodão.png" ></div>
+                    <div onclick="SelecionarTecido(this)" class="opçao tecido"><img  class="desenho dois" src="imagens/FashionDriven/Algodão.png" ><p id="tipo">cotton</p></div>
                     <h2>Algodão</h2>
                 </div>
                 <div class="opçaoG">
-                     <div onclick="SelecionarTecido(this)" class="opçao tecido"><img id="poliester" class="desenho tres" src="imagens/FashionDriven/Poliester.png" ></div>
+                     <div onclick="SelecionarTecido(this)" class="opçao tecido"><img id="poliester" class="desenho tres" src="imagens/FashionDriven/Poliester.png" ><p id="tipo">polyester</p></div>
                      <h2>Poliéster</h2>
                 </div>
             </div>
